@@ -1,11 +1,11 @@
 <HTML>
-<!--  $Id: gmt_install_form.html,v 1.63 2009-02-10 23:47:52 guru Exp $  -->
+<!--  $Id: gmt_install_form.html,v 1.64 2009-02-13 03:25:24 guru Exp $  -->
 <HEAD>
 <TITLE>GMT Installation Helper</TITLE>
 </HEAD>
 <BODY bgcolor="#ffffff">
 <FORM ACTION="/cgi-bin/install_gmt_form.pl" ENCTYPE="x-www-form-encoded" METHOD="POST">
-<INPUT TYPE="hidden" VALUE="$Revision: 1.63 $" NAME="form_version">
+<INPUT TYPE="hidden" VALUE="$Revision: 1.64 $" NAME="form_version">
 <H2><CENTER>GMT Installation Helper</CENTER></H2>
 </P>
 This page helps you customize the GMT installation procedure under Unix or Unix-like
@@ -262,7 +262,7 @@ The man utility will find the GMT man pages if the chosen man directory is inclu
 users' MANPATH environmental variable.
 Make sure the users' search path contains the directory where you place the executables.  
 Finally, advise users to add a browser bookmark for the
-file gmt/gmt_services.html in the web directory you chose above; that page provides links to online
+file gmt/doc/html/gmt_services.html in the web directory you chose above; that page provides links to online
 GMT documentation and man pages (assuming you selected the web archive in Section C.3).</I><BR>
 
 <!--  GMT_SHAREDIR DIRECTORY SELECTION  -->
